--- a/index.html
+++ b/index.html
@@ -10,27 +10,37 @@
 </head>
 <body>
   <section class='edit'>
-      <img class='edit__header__img' src='./icons/chevron-down.png' onclick='toggleShow()'/>
-      <h1>Edit Card</h1>
-    
-    <form class='edit__form'>
-      <!-- inputs and labes inserted by script -->
-    </form>
-    <form class='edit__upload-image'>
-        <h4>Upload Logo</h4>
-        <input type="file" onchange='addImages()' />
-    </form>
-    <div class='gallery'>
-      <!-- images inserted by script -->
+    <img class='edit__header__img' src='./icons/chevron-down.png' onclick='toggleShow()'/>
+    <h1>Edit Card</h1>
+    <div class='edit__body'>
+      <div class='edit__body__left'>
+        <form class='edit__body__left__form'>
+          
+          <!-- inputs and labes inserted by script -->
+        </form>
+        <div class='edit__body__left__color-picker'>
+          <label>Accent Color</label>
+          <input class='edit__body__left__color-picker__input' type='color'  value='#FFFFFF' />
+        </div>
+      </div>
+      <form class='edit__body__upload-image'>
+          <h4 class='edit__body__upload-image__h4'>Upload Logo</h4>
+          <input type="file" onchange='addImages()' />
+          <div class='gallery'>
+              <!-- images inserted by script -->
+          </div>
+      </form>
     </div>
   </section>
  
   <section class='preview'>
-    <img class='preview__img' src="" alt="Image preview..." />
+    <img class='preview__img' src="" />
     <!-- text inserted by script -->
-    <div class='preview__large-inline'></div>
-    <div class='preview__medium-inline'></div>
-    <div class='preview__small-block'></div>
+    <div class='preview__text'>
+      <div class='preview__text__large-inline'></div>
+      <div class='preview__text__medium-block'></div>
+    </div>
+    <div class='preview__text__small-inline'></div>
   </section>
 </body>
 </html>
