--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <form class='edit__body__upload-image'>
           <h4 class='edit__body__upload-image__h4'>Upload Logo</h4>
           <input type="file" onchange='addImages()' />
-          <div class='gallery'>
+          <div class='edit__body__upload-image__gallery'>
               <!-- images inserted by script -->
           </div>
       </form>
