add gif to readme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section class='edit'>
-    <img class='edit__header__img' src='./icons/chevron-down.png' onclick='toggleShow()'/>
+    <img class='edit__header__img' src='./images/chevron-down.png' onclick='toggleShow()'/>
     <h1>Edit Card</h1>
     <div class='edit__body'>
       <div class='edit__body__left'>
